--- a/main.css
+++ b/main.css
@@ -13,3 +13,9 @@ body{
     align-items: center;
     justify-content: center;
 }
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
